<resources>
    <string name="app_name">GamesInfo</string>

    <!--    FRAGMENT TITLES     -->
    <string name="title_news">News</string>
    <string name="title_reviews">Reviews</string>
    <string name="title_videos">Videos</string>
    <string name="title_games">Games</string>
    <string name="title_events">Events</string>
    <string name="related_image">Related Image</string>
    <string name="placeholder_title">PLACEHOLDER TITLE</string>
    <string name="Lorem_Ipsum">orem ipsum dolor sit amet, consectetur adipiscing elit. Nunc congue nisl mollis est lacinia aliquet. Suspendisse sit amet imperdiet mi, id hendrerit justo. Vivamus cursus interdum ultrices. Curabitur ornare odio augue, at ornare elit porta id. Aenean cursus sed urna at vestibulum. Nullam augue mauris, tempus vel rhoncus ac, elementum eu sem. Phasellus vitae orci sed diam eleifend posuere nec eu elit. Pellentesque quis erat convallis, tempor dui id, blandit diam. Integer malesuada odio facilisis, pulvinar arcu id, posuere neque. Aliquam erat volutpat. Suspendisse euismod ligula sit amet mi sollicitudin fermentum. Vivamus eget lectus nibh. Suspendisse vel quam at leo hendrerit condimentum id sed libero. Integer eget ligula id nulla fringilla convallis eget ut enim. Sed molestie turpis ligula, nec rhoncus quam eleifend a. Nullam tristique, ligula eu bibendum semper, quam nulla consectetur felis, vel elementum eros ipsum eu arcu. Duis nulla nibh, hendrerit sed aliquam nec, tristique in arcu. Nam eget libero a purus efficitur tempor. Cras eleifend facilisis ligula, vel imperdiet tellus iaculis eu. Integer euismod tincidunt quam, eu scelerisque sem mattis nec. Sed in sapien pulvinar, tempus purus quis, hendrerit libero. Pellentesque vitae orci vel nisl rutrum cursus. Aliquam sodales in augue ut venenatis. Duis pretium nisl sed hendrerit scelerisque. Mauris ornare nisi eu dolor molestie elementum eget sit amet orci. Nam ullamcorper ligula pellentesque sapien eleifend bibendum. Curabitur pretium pulvinar laoreet. Morbi vestibulum ornare dolor vel viverra. Praesent finibus lorem ut mi accumsan luctus. Curabitur id justo eu arcu tincidunt bibendum. Cras vel gravida ligula. Ut vitae turpis et nisl sodales porta et id tellus. Morbi cursus malesuada nibh, at mattis libero iaculis sed. Duis iaculis ut lacus et porta. Nullam vel mauris ultricies, ultricies lorem quis, tempor felis. Integer porta imperdiet mi, sed tristique nibh tempus in. Maecenas luctus orci ac urna pulvinar lobortis. Etiam et justo quis metus egestas efficitur. Suspendisse placerat nulla ut erat porta, eget porta enim interdum. Mauris sem risus, interdum et ligula vitae, rhoncus hendrerit lorem. Duis finibus, urna sed posuere ullamcorper, justo ex blandit erat, eget laoreet augue enim in nisl. Donec faucibus tempor ante, ut dapibus lectus venenatis vitae. Morbi ac nisl placerat, rhoncus diam at, tristique lectus. Fusce dapibus nunc ligula, vel fringilla metus tristique et. Morbi molestie nibh magna, eu tempus enim vestibulum eget. Integer sagittis mauris a efficitur blandit. Sed sit amet nulla sed felis pellentesque scelerisque. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Vestibulum non faucibus est. Quisque imperdiet erat vel tellus maximus ultrices. Morbi rhoncus eros nibh, vel feugiat ipsum ornare ut. Ut tristique accumsan ligula, a aliquet risus euismod quis. Ut placerat orci vitae nibh sagittis, pharetra egestas erat iaculis. Proin non lacinia arcu, nec vulputate arcu. Nunc quis orci quis quam luctus molestie in sit amet libero. In id nunc metus. Integer consequat lectus non eros accumsan lobortis. Quisque vehicula dui dui, nec tempor purus efficitur at. Proin lobortis eros ac nulla iaculis aliquam. Aenean malesuada velit massa, et pellentesque eros gravida vulputate. Maecenas nec est at justo porttitor maximus. Maecenas placerat molestie enim non porta. Curabitur suscipit dignissim elit non volutpat. Fusce et aliquet dolor.</string>
    <string name="load_more">Load More</string>
    <string name="release_date">Release Date</string>
    <string name="game_title">Game Title</string>
    <string name="genre">Genre</string>
    <string name="please_select_a_filter">Please select a filter:</string>
    <string name="search_for_games">Search for games:</string>
    <string name="franchise">Franchise</string>
</resources>