<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/row_card"
    android:layout_width="match_parent"
    android:layout_height="130dp"
    android:layout_alignParentTop="true"
    android:foreground="?attr/selectableItemBackground"
    android:paddingEnd="5dp"
    android:paddingStart="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true"
    android:clickable="true"
    android:focusable="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingEnd="10dp"
        android:orientation="horizontal">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="130dp"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/row_IMG_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/image_border"
                android:contentDescription="@string/related_image" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/row_LBL_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_marginStart="5dp"
                android:text="@string/placeholder_title"
                android:textStyle="bold"
                android:autoSizeTextType="uniform"
                />

            <TextView
                android:id="@+id/row_LBL_name"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textSize="14sp"
                android:layout_marginStart="5dp"
                android:text="@string/Lorem_Ipsum"
                android:ellipsize="end"
                android:layout_below="@+id/row_LBL_title"
                android:textStyle="italic"
                android:breakStrategy="high_quality"
                android:autoSizeTextType="uniform"/>


        </RelativeLayout>

    </LinearLayout>


</com.google.android.material.card.MaterialCardView>