<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/video_row_card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_alignParentTop="true"
    android:clickable="true"
    android:focusable="true"
    android:foreground="?attr/selectableItemBackground"
    android:paddingStart="5dp"
    android:paddingEnd="5dp"
    app:cardElevation="5dp"
    app:cardMaxElevation="0dp"
    app:cardPreventCornerOverlap="false"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingEnd="10dp">

            <ImageView
                android:id="@+id/video_row_IMG_image"
                android:layout_width="130dp"
                android:layout_height="match_parent"
                android:adjustViewBounds="false"
                android:background="@drawable/image_border"
                android:contentDescription="@string/related_image"
                android:maxWidth="130dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/video_row_LBL_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:autoSizeTextType="uniform"
                    android:text="@string/placeholder_title"
                    android:textSize="18sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/video_row_LBL_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/video_row_LBL_title"
                    android:layout_marginStart="5dp"
                    android:breakStrategy="high_quality"
                    android:ellipsize="end"
                    android:text="@string/Lorem_Ipsum"
                    android:textSize="14sp"
                    android:textStyle="italic" />


            </RelativeLayout>


        </LinearLayout>

        <TextView
            android:id="@+id/video_row_LBL_published"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:gravity="center_horizontal"
            android:textSize="16sp"
            android:textStyle="italic" />

        <cn.jzvd.JzvdStd
            android:id="@+id/video_row_IMG_video"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:layout_margin="20dp"
            />

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>